5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4175/executions/1715_3065.log
== TEST (2019-05-02 16:01:39) 
-- CODE:
x = input("digite o ataque q foi levado: (cuspe,patada,calda)")


-- OUTPUT:
Entradas: 0 anos e IMC 0.0
Dados invalidos
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:05:30) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (calda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))

print(x.upper())
print(y)

if y > 0 and w >= 0:
	
-- ERROR:
File "XXXX", line 10
    
     ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:05:46) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (calda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))

print(x.upper())
print(y)

	
-- OUTPUT:
CAUDA
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:13) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA")
	if y > 0 and w >= 0:
		if x.upper() == "CALDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("invalido")
-- ERROR:
File "XXXX", line 6
    if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA")
                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:20) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CALDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("invalido")
-- ERROR:
File "XXXX", line 6
    if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA")
                                                                               ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:14:59) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CALDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("invalido")
else: 
	print("invalido")
-- OUTPUT:
invalido
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:22) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CALDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:30) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CALDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CALDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
Entrada invalida
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:15:49) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:15:58) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.196798
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:

-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
Entrada invalida
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:06) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*Y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:17) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:25) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:16:52) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:06) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:17:12) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.118258
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:17:14) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.22605
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:17:15) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.128891
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:15) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:25) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:32) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:17:36) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w >= 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:14) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:41) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:18:46) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:18:53) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.204694
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:19:35) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:19:43) 
-- CODE:
x = input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.231294
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
25
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:02) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:34) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:20:48) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0 and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-02 16:21:31) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0  and y <= 4  and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- OUTPUT:
12
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:21:33) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0  and y <= 4  and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.193604
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:47:55) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0  and y <= 4  and w > 0:
		if x.upper() == "CAUDA":
			
			print(y*w)
		elif x.upper() == "CUSPE":
			
			print((2*y)*w)
			
		elif x.upper() == "PATADA":
			
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.193973
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
digite o ataque realizado por cornugon: (cauda,patada,cuspe)digite o valor do dado de 1 a 4: numero de turnos q o persnagem fica ferido: 12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
digite o ataque realizado por cornugon: (cauda,patada,cuspe)digite o valor do dado de 1 a 4: numero de turnos q o persnagem fica ferido: Entrada invalida
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
digite o ataque realizado por cornugon: (cauda,patada,cuspe)digite o valor do dado de 1 a 4: numero de turnos q o persnagem fica ferido: 12
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-02 16:47:59) 
-- CODE:
x = (input("digite o ataque realizado por cornugon: (cauda,patada,cuspe)")).upper()
y = int(input("digite o valor do dado de 1 a 4: "))
w = int(input("numero de turnos q o persnagem fica ferido: "))


if (x.upper() == "CAUDA"  or  x.upper() == "CUSPE"  or  x.upper() == "PATADA"):
	if y > 0  and y <= 4  and w > 0:
		if x.upper() == "CAUDA":
			print(y*w)
		elif x.upper() == "CUSPE":
			print((2*y)*w)
		elif x.upper() == "PATADA":
			print(((2*y)-5)*w)
	else:
		print("Entrada invalida")
else: 
	print("Entrada invalida")
-- EXECUTION TIME:
0.17983
-- TEST CASE 1:
---- input:
CAUDA
2
6
---- correct output:
12
---- user output:
12
-- TEST CASE 2:
---- input:
PATADA
5
5
---- correct output:
Entrada invalida
---- user output:
Entrada invalida
-- TEST CASE 3:
---- input:
CUSPE
3
2
---- correct output:
12
---- user output:
12
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
